# pytorch-profiling-demo

./: .gitignore  README.md  multi_stream_profile.py  pyproject.toml  simple_profile.py  trace_harness.py  train_mnist.py
configs/: config_basic_gpu.yaml  config_big_batch.yaml  config_large_test_batch.yaml  config_medium_batch.yaml  config_prefetch_data.yaml  config_with_more_prefetch.yaml  config_with_prefetch.yaml
