[project]
name = "pytorch-profiling-example"
version = "0.1.0"
description = "Demonstrates the use of the Pytorch profiler"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
